test/tests/stages/9_functions/invalid_labels/extra_credit/goto_function.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[23]:
  int
  identifier(foo)
  (
  void
  )
  {
  return
  const int(3)
  ;
  }
  int
  identifier(main)
  (
  void
  )
  {
  goto
  identifier(foo)
  ;
  return
  const int(3)
  ;
  }
